--- a/source/css/cart.css
+++ b/source/css/cart.css
@@ -1,7 +1,7 @@
 .cart-sidebar {
     position: fixed;
     top: 0;
-    right: -300px; /* Initially hidden */
+    right: -300px; 
     width: 300px;
     height: 100%;
     background: #f8f9fa;
@@ -14,7 +14,7 @@
 }
 
 .cart-sidebar.open {
-    right: 0; /* Opens cart */
+    right: 0; 
 }
 
 .cart-header {
